# devcontainers-sample-cfn

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: lint.yml
parameters/: stack-sample.json
templates/: stack-sample.yaml
