[project]
name = "devcontainers-sample-cfn"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "lycheejam", email = "32588863+Lycheejam@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "yamllint>=1.35.1",
    "cfn-lint>=1.11.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/devcontainers_sample_cfn"]
